@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"> <!-- flatpickr CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/plugins/timePicker/timePicker.min.css"> <!-- flatpickr time plugin CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script> <!-- flatpickr JS -->
     <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/plugins/timePicker/timePicker.min.js"></script> <!-- flatpickr time plugin JS -->
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script> <!-- Firebase App (the core Firebase SDK) -->
@@ -21,6 +22,8 @@
     <script src="availability_form.js"></script>
     <script src="ui.js"></script>
     <script src="ui_timepicker.js"></script>
+    <script src="match_request.js"></script>
+    <script src="match_requests_box.js"></script>
 </head>
 <body>
         <div class="container py-4">
@@ -78,6 +81,14 @@
                     </form>
                     <div id="partner-results" class="mb-3"></div>
                     <div id="my-partner-summary"></div>
+                </div>
+            </div>
+
+            <!-- Match Requests Section -->
+            <div class="card mb-4" id="match-requests-section">
+                <div class="card-header bg-warning text-dark">Your Match Requests</div>
+                    <div class="card-body">
+                <div id="match-requests-list">Loading...</div>
                 </div>
             </div>
         </div>
