@@ -3,3 +3,7 @@
 * change to look for partners in next 28 days instead of 14
 * fixed issue with dates not visible
 * Calendar starting on Monday
+
+31st Aug 2025
+
+* added function to send match requests
